--- a/frontend/src/style.css
+++ b/frontend/src/style.css
@@ -1,3 +1,29 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+
+@font-face {
+    font-family: 'Cormorant-Garmont-Bold';
+    src: url('./assets/fonts/CormorantGaramond-Bold.woff2') format('woff2');
+    font-weight: normal;
+    font-style: normal;
+  }
+@font-face {
+    font-family: 'Karla-Regular';
+    src: url('./assets/fonts/Karla-Regular.woff2') format('woff2');
+    font-weight: normal;
+    font-style: normal;
+  }
+@font-face {
+    font-family: 'Cormorant-Garamont-Regular';
+    src: url('./assets/fonts/CormorantGaramond-Regular.ttf') format('truetype');
+    font-weight: normal;
+    font-style: normal;
+  }
+@font-face {
+    font-family: 'Cormorant-Garamont-Italic';
+    src: url('./assets/fonts/CormorantGaramond-Italic.ttf') format('truetype');
+    font-weight: normal;
+    font-style: normal;
+  }
